# pinyin_rs

./: Cargo.toml  Makefile
pinyin/: Cargo.toml
pinyin/src/: db.rs  lib.rs  pinyin.rs  pinyin.txt
pinyin/src/db/: parser.rs
pinyin_svc/: Cargo.toml
pinyin_svc/src/: lib.rs  main.rs
src/: lib.rs  main.rs
