[package]
name = "pinyin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
utoipa = "2.4.2"
utoipa-swagger-ui = "3.0.1"
warp = "0.3.3"
