[package]
name = "pinyin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
tokio = { version = "1.24.2", features = ["rt", "macros"] }
utoipa = "2.4.2"
utoipa-swagger-ui = "3.0.1"
warp = "0.3.3"

[profile.release]
lto = true
codegen-units=1
