[package]
name = "pinyin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
serde = {version ="1.0.152", features = ["derive"]}
tokio = { version = "1.24.2", features = ["rt", "macros"] }
utoipa = {version = "2.4.2", optional = true}
utoipa-swagger-ui = {version = "3.0.1", optional = true}
warp = "0.3.3"

[profile.release]
lto = true
codegen-units=1

[features]
swagger = ["utoipa-swagger-ui", "utoipa"]
default = ["swagger"]

[profile.dev]
split-debuginfo = "unpacked"
