[package]
name = "pinyin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modular-bitfield = "0.11.2"
nom = "7.1.3"
serde = {version ="1.0.152", features = ["derive"], optional = true}
strum = "0.24.1"
strum_macros = "0.24.3"
utoipa = {version = "2.4.2", optional = true}

[features]
swagger = ["utoipa"]
default = ["swagger"]

[dev-dependencies]
itertools = "0.10.5"
rstest = {version = "0.16.0", default_features= false}
