[package]
name = "piny"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for parsing and generating Pinyin syllables"
repository = "https://github.com/redforks/pinyin_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
modular-bitfield = "0.11.2"
nohash-hasher = "0.2.0"
nom = "7.1.3"
serde = {version ="1.0.152", features = ["derive"], optional = true}
strum = "0.24.1"
strum_macros = "0.24.3"
utoipa = {version = "2.4.2", optional = true}

[features]
polyphone=[]
swagger = ["utoipa"]
default = ["swagger", "polyphone"]

[dev-dependencies]
itertools = "0.10.5"
rstest = {version = "0.16.0", default_features= false}
